Removed cause of deprecation warnings